--- a/style1.css
+++ b/style1.css
@@ -37,6 +37,7 @@ h1 {
 .container {
   width: 90%;
   max-width: 400px;
+  min-width: 400px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -55,6 +56,7 @@ h1 {
   font-weight: var(--fw-bold);
   font-size: var(--fs-display);
   text-align: end;
+  overflow-x: hidden;
 }
 
 .buttons-grid {
