--- a/style1.css
+++ b/style1.css
@@ -29,6 +29,8 @@ body {
   font-weight: var(--fw-light);
   font-size: var(--fs-btn);
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Typographic  */
@@ -127,4 +129,36 @@ h1 {
 [data-value='sign'],
 [data-value='equal'] {
   background-color: var(--clr-purple);
+}
+
+/* footer */
+footer {
+  margin-top: auto;
+  margin-bottom: 0;
+  text-align: center;
+  padding: 1em;
+  background-color: var(--clr-accent);
+  color: var(--clr-light);
+}
+
+footer a {
+  color: inherit;
+  text-decoration: none;
+}
+
+
+.social-list {
+  list-style: none;
+  padding: 0;
+  margin: .5em 0 0;
+  display: flex;
+  justify-content: center;
+}
+
+.social-list__item {
+  margin: 0 0.5em;
+}
+
+.social-list__link {
+  padding: .5em;
 }
